# project-2026

./: .gitignore  CMakeLists.txt  GUIDE.md  README.md  start.sh
examples/: bench_matching.py  stat_arb.py
include/hft_simulator/: benchmark.h  editor.hpp  engine.h  feed.hpp  latency_hist.hpp  market.h  matching.hpp  metrics.hpp  order.hpp  orderbook.hpp  risk.hpp  strategy.h  ui.h
python/quantsim/live/: binance.py
research/: hft_research.md
src/: bench_lob.cpp  benchmark.cpp  editor.cpp  engine.cpp  feed_replay.cpp  gui_main.cpp  itch_parser.cpp  market.cpp  matching.cpp  orderbook.cpp  strategy.cpp  ui.cpp
tests/: test_matching.cpp
